# neuraldatabase

./: .clangd  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
benchmarks/: bench_search.cpp
include/: distance.hpp  filter.hpp  hnsw.hpp  paged_index.hpp  storage.hpp  vector_store.hpp  wal.hpp
kernels/: cosine_avx2.cpp  cosine_naive.cpp  cosine_neon.cpp  l2_avx2.cpp  l2_neon.cpp
python/: bindings.cpp
scripts/: generate_embeddings.py
src/: cli.cpp  distance.cpp  filter.cpp  hnsw.cpp  paged_index.cpp  storage.cpp  vector_store.cpp  wal.cpp
tests/: test_deletes.cpp  test_distance.cpp  test_filter.cpp  test_hnsw.cpp  test_neon.cpp  test_paged.cpp
